Optimize RO-Crate handling