@@ -1,12 +1,7 @@
 package edu.kit.datamanager.ro_crate.preview;
 
 import edu.harvard.iq.dataverse.arp.ArpConfig;
-import edu.harvard.iq.dataverse.settings.JvmSettings;
 
-import javax.naming.InitialContext;
-import javax.naming.NamingException;
-import java.io.IOException;
-import java.io.InputStream;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
@@ -14,9 +9,6 @@ import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Properties;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 
 // Note: this class have been copied from the original ro_crate project and updated to call our preview generation
 // service running as a standalone service.
@@ -26,7 +18,7 @@ import java.util.logging.Logger;
  */
 public class PreviewGenerator {
 
-    private static final Logger logger = Logger.getLogger(ArpConfig.class.getCanonicalName());
+    private static final HttpClient HTTP_CLIENT = HttpClient.newHttpClient();
 
     // This is a solution for the following edge case: a dataset is open in AROMA and the Dataverse is restarted. Then if
     // we try to edit and save the dataset in AROMA the preview generation will fail because  ArpConfig.instance is not
@@ -39,7 +31,7 @@ public class PreviewGenerator {
         ArpConfig.ensureStaticInstance();
     }
 
-    // There is no need to check if the rocrate preview generator is available, 
+    // There is no need to check if the rocrate preview generator is available,
     // we use our hosted generator, if it is not available we can not generate the preview
     public static boolean isRochtmlAvailable() {
         return true;
@@ -51,17 +43,23 @@ public class PreviewGenerator {
      * @param location the location of the crate in the filesystem.
      */
     public static void generatePreview(String location) throws Exception {
-        String roCrateMetadataJson = new String(Files.readAllBytes(Paths.get(location+"/ro-crate-metadata.json")), java.nio.charset.StandardCharsets.UTF_8);
-        HttpClient client = HttpClient.newHttpClient();
+        String roCrateMetadataJson = Files.readString(Paths.get(location, "ro-crate-metadata.json"), StandardCharsets.UTF_8);
+        generatePreview(location, roCrateMetadataJson);
+    }
+
+    /**
+     * Generates the HTML preview from in-memory metadata JSON so the file is not re-read from disk.
+     */
+    public static void generatePreview(String location, String roCrateMetadataJson) throws Exception {
         String previewGeneratorAddress = ArpConfig.instance.get("arp.rocrate.previewgenerator.address");
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(new URI(previewGeneratorAddress))
                 .POST(HttpRequest.BodyPublishers.ofString(roCrateMetadataJson, StandardCharsets.UTF_8))
                 .build();
-        HttpResponse<String> resp = client.send(request, HttpResponse.BodyHandlers.ofString());
+        HttpResponse<String> resp = HTTP_CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
         if (resp.statusCode() != 200) {
             throw new Exception("Failed to generate HTML preview for the roCrate with path: " + location + "\n" + resp.body());
         }
-        Files.writeString(Paths.get(location+"/ro-crate-preview.html"), resp.body(), StandardCharsets.UTF_8);
+        Files.writeString(Paths.get(location, "ro-crate-preview.html"), resp.body(), StandardCharsets.UTF_8);
     }
 }
